--- a/Token-iOS/Info.plist
+++ b/Token-iOS/Info.plist
@@ -8,6 +8,10 @@
 	<string>Token-iOS</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIcons</key>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -33,10 +37,10 @@
 		<key>NSAllowsArbitraryLoadsInWebContent</key>
 		<true/>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Token uses the camera to take photos and video.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Camera</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Token uses the camera to take photos and video.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Token uses the microphone to record sound during Live Photos and movies.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
