tried a new framework for collection views

--- a/Token-iOS/Info.plist
+++ b/Token-iOS/Info.plist
@@ -47,6 +47,8 @@
 	<string>Token saves captured photos and videos to your photo library.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>MainApp</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
